objects/Account.object
<CustomObject>
    <fields>
        <fullName>fferpcore__VatRegistrationNumber__c</fullName>
        <description>Identifying number used for VAT purposes.</description>
        <inlineHelpText>Identifying number used for tax purposes.</inlineHelpText>
        <label>Tax Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__VatStatus__c</fullName>
        <description>The tax status for this account for VAT/GST accounts.</description>
        <inlineHelpText>The tax status for this account for VAT/GST accounts.</inlineHelpText>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>EC Non-registered</fullName>
                </value>
                <value>
                    <fullName>EC Registered</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Add_BEIs_To_Existing_Batches__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, all existing billing event items are added to an existing billing event instead of creating a new billing event.</description>
        <inlineHelpText>If selected, all existing billing event items are added to an existing billing event instead of creating a new billing event.</inlineHelpText>
        <label>Add BEIs To Existing Batches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__ERP_Worker_Correlation_Id__c</fullName>
        <description>This records the worker correlation key used within the Foundations system.</description>
        <externalId>true</externalId>
        <inlineHelpText>This records the worker correlation key used within the Foundations system.</inlineHelpText>
        <label>Foundations Worker Correlation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Services_Billing_Time_Period_Type__c</fullName>
        <label>Services Billing Time Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>ffaws__Customer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>c2g__CODAInvoiceEmail__c</columns>
        <columns>c2g__CODAPaymentMethod__c</columns>
        <columns>c2g__CODAAccountTradingCurrency__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>c2g__CODACreditStatus__c</columns>
        <columns>c2g__CODACreditLimitEnabled__c</columns>
        <columns>c2g__CODACreditLimit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__CODAAccountsReceivableControl__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Customer Accounts</label>
    </listViews>
    <listViews>
        <fullName>ffaws__OnHoldForCollections</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>c2g__CollectionsOnHold__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Accounts On Hold for collections</label>
    </listViews>
    <listViews>
        <fullName>ffaws__Vendor_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>c2g__CODAFinanceContact__c</columns>
        <columns>c2g__CODAPaymentMethod__c</columns>
        <columns>c2g__CODAAccountTradingCurrency__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__CODAAccountsPayableControl__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Vendor Accounts</label>
    </listViews>
    <listViews>
        <fullName>scmws__Active_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.SALES</columns>
        <columns>SCMC__E_Mail__c</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>SCMC__Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer - Direct,Customer - Channel</value>
        </filters>
        <filters>
            <field>SCMC__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SCMC__Customer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Lock_Account_Currency</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

ISCHANGED( CurrencyIsoCode ),

OR(

NOT( ISBLANK( c2g__CODAAccountsReceivableControl__c )),

NOT( ISBLANK( c2g__CODAAccountsPayableControl__c ))

)

)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>This Account is in use by FinancialForce Accounting. You cannot change its currency.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SCMC__Both_Auto_Quote_No_Response_Checked</fullName>
        <active>false</active>
        <description>User can not have both Auto Quote and No Response Checked</description>
        <errorConditionFormula>SCMC__Auto_Quote__c = true  &amp;&amp;  SCMC__No_Response__c = true</errorConditionFormula>
        <errorMessage>You cannot set up an Account with Auto Quote and No Response</errorMessage>
    </validationRules>
</CustomObject>